--- a/main.css
+++ b/main.css
@@ -4,7 +4,9 @@ header{
 }
 
 nav{
-    margin-right: 5%; margin-top: 10px; float: right;
+    margin-right: 5%;
+    margin-top: 10px;
+    float: right;
 }
 
 button{
@@ -29,4 +31,10 @@ p{
     margin: 0;
     color: gray;
     font-size: 20px;
+}
+
+span{
+    display:inline;
+    text-align: right;
+    margin-left: 50px;
 }
