All styling to css with fontawesome

--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,12 @@ padding: 0;
 .container{
     display: inline-block;
     width: 100%;
+    margin-top: 20px;
 }
 
 .logo{
     float: left;
     margin-left: 5%;
-    background-color: blanchedalmond;
     height: 50px;
 }
 
@@ -32,22 +32,47 @@ padding: 0;
     padding: 0px 5px;
 }
 
-main{
+.first-line{
+    margin-top: 50px;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-h1{
-    margin: 0;
+
+.title{
     font-size: 40px;
     line-height: 1em;
-}
-p{
-    margin: 0;
-    color: gray;
-    font-size: 20px;
+    float: left;
+    width: 40%;
+    margin-left: 15%;
 }
 
-span{
+.title > span{
+    display: block;
+    color: gray;
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.button{
+    float: left;
+    margin-top: 15px;
+    margin-left: 5%;
+    padding: 10px;
+    border-color: gray;
+    border-style: solid;
+    border-width: 2px;
+    color: gray;
+    text-decoration: none;
+}
+
+.fa-angle-right{
     display:inline;
     text-align: right;
     margin-left: 50px;
+}
+
+.second-line{
+    float: right;
+    width: 55%;
+    margin-left: 45%;
+    margin-top: 100px;
 }
