--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,9 @@ padding: 0;
 
 .container{
     display: inline-block;
-    width: 100%;
+    width: 900px;
     margin-top: 20px;
+    margin-left: calc(50% - 450px);
 }
 
 .logo{
@@ -72,7 +73,33 @@ padding: 0;
 
 .second-line{
     float: right;
-    width: 55%;
-    margin-left: 45%;
+    width: 500px;
     margin-top: 100px;
+}
+
+@media (max-width: 900px) {
+    .container {
+        display: inline-block;
+        width: 700px;
+        margin-left: calc(50% - 350px);
+    }
+    .title {
+        width: 54%;
+    }
+}
+
+@media (max-width: 700px) {
+    .container {
+        display: inline-block;
+        width: 100%;
+        margin-left: 0;
+    }
+    .title {
+        width: 90%;
+        margin-left: 5%;
+    }
+    .second-line{
+        float: right;
+        width: 100%;
+    }
 }
